k8s/beacon/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __NAMESPACE_NAME__-backend
  namespace: __NAMESPACE_NAME__
  annotations:
    kubernetes.io/ingress.class: 'nginx'    
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  tls:
    - hosts:
        - __NAMESPACE_NAME__.prod.gke.papers.tech
      secretName: __NAMESPACE_NAME__-prod-tls
  rules:
    - host: __NAMESPACE_NAME__.prod.gke.papers.tech
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: __NAMESPACE_NAME__-backend-service
                port: 
                  number: 3000
